--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,21 @@ video {
     opacity: 0.7;
 }
 
+@media (min-aspect-ration: 16/9){
+    .back-video{
+        width: 100%;
+        height: auto;
+
+    }
+}
+@media (max-aspect-ration: 16/9){
+    .back-video{
+        width: auto;
+        height: 100%;
+
+    }
+}
+
   header nav {
     display: inline-block;
     position: absolute;
