--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ header {
     margin: 0;
     padding: 0;
     height: 100vh;
-    background-color: #000;
+    background-color: transparent;
     overflow: hidden;
 }
 
